# mephi_dozen_3

./: .gitignore  CMakeLists.txt
lab_1/: data.cpp  data.h  main.cpp  matrix.cpp  matrix.h
lab_2/: main.cpp
lab_2/hard_class/: class.cpp  class.h
lab_2/menu/: methods.cpp  methods.h
lab_2/menu/hard_manager/: manager.cpp  manager.h  operations.cpp  operations.h
lab_2/simple_class/: class.cpp  class.h
lab_2/testing/: testing.cpp
lab_2/testing/hard_class/: testing.cpp
lab_2/testing/simple_class/: testing.cpp
menu/: CMakeLists.txt  character.h  colors.cpp  colors.h  main.cpp  menu.cpp  menu.h  sample.cpp  system.h
menu/linux/: input_char.cpp  input_char.h
menu/windows/: input_char.cpp  input_char.h
